@@ -1,8 +1,9 @@
 ;;
 ;; test user configuration file
-;; $Id: testuser.conf,v 1.1 2004/01/29 07:19:18 tahara Exp $
+;; test account: gandalf, friend
+;; $Id: testuser.conf,v 1.2 2004/02/25 05:56:40 tahara Exp $
 
-(("gandalf" . "gf6L/odXbD7LIkJvjleEc4KRes8="))
+(("gandalf" "5phnyn1aewq2Ciph57eRwQb3v2Q=" '()))
 
 ;; Local variables:
 ;; mode: scheme
