@@ -1,3 +1,8 @@
+2004-02-25  Yusei Tahara  <tahara@timedia.co.jp>
+
+	* test/shell.scm, test/testuser.conf: added kahua-shell test.
+	* test/Makefile: added 'shell' make target.
+
 2004-02-23  Koichi Sasada <sasada@namikilab.taut.ac.jp>
 
 	* src/kahua-spvr.in : bug fixed about ping.
